--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://demo.stack.jimmycai.com"
+baseurl = "https://davidham3.github.io/blog"
 languageCode = "en-us"
 title = "Davidham的博客"
 
